--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "request": "^2.85.0",
-    "three": "^0.91.0"
+    "three": "^0.91.0",
+    "three-mtl-loader": "^1.0.2",
+    "three-obj-loader": "^1.1.3"
   },
   "bugs": {
     "url": "https://github.com/rksquared/hrnyc14-POLY3D-mvp/issues"
